cmake_minimum_required(VERSION 3.14)
project(cleetcode C)

set(CMAKE_C_STANDARD 11)

add_executable(cleetcode main.c)
add_executable(t707 solved/t707.c)
add_executable(t206 solving/t206.c)
add_executable(t234 solving/t234.c)
add_executable(t141 solving/t141.c)
add_executable(t237 solved/t237.c)
add_executable(t160 contested/t160.c)
add_executable(t876 solved/t876.c)
add_executable(t2 solving/t2.c)